# ignis

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
build_files/: util.cmake
source/: CMakeLists.txt
source/app/editor/: entry.c
source/ignis/ignis/: CMakeLists.txt
source/ignis/ignis/core/: allocator.h  debug.c  debug.h  defines.h
source/tests/: CMakeLists.txt
source/tests/framework/: apr_ring.h  lcut.c  lcut.h  main.c
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/editor/: main.c
src/editor/: CMakeLists.txt
src/editor/main/: main.c
src/ignis/: CMakeLists.txt
src/ignis/ignis/: CMakeLists.txt
src/ignis/ignis/containers/: dyarr.c  dyarr.h  list.c  list.h  strbuf.c  strbuf.h  strview.c  strview.h
src/ignis/ignis/core/: cstr.h  debug.c  debug.h  defines.h  log.c  log.h  memory.c  memory.h  util.h
src/ignis/ignis/core/memory/: memory.c  memory.h
src/ignis/ignis/core/threads/: mutex.h  thread.h
src/ignis/ignis/platform/: defines.h
src/ignis/ignis/platform/unix/: threads.c
src/ignis/ignis/platform/windows/: threads.c
src/ignis/ignis/renderer/: window.h
src/ignis/ignis/renderer_hardware/: window.c  window.h
src/lib/: CMakeLists.txt
src/lib/glad/include/glad/: glad.h
src/lib/glad/src/: glad.c
src/tests/: CMakeLists.txt
src/tests/tests/: framework.h  main.c
src/tests/tests/containers/: test_containers.h  test_dyarr.c  test_strbuf.c  test_strview.c
